add splash and icon app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   bloc: ^8.0.3
   get_it: ^7.2.0
   get_storage: ^2.0.3
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   lottie: ^1.4.3
   singleton: ^0.0.3-nullsafety
   velocity_x: ^3.5.1
@@ -55,6 +55,9 @@ dependencies:
   sentry_flutter: ^6.5.1
   internet_connection_checker: ^1.0.0+1
   fluttertoast: ^8.2.1
+  simple_gradient_text: ^1.2.4
+  flutter_hooks: ^0.18.5
+  loader_overlay: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -66,12 +69,19 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.11.0
   
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+flutter_icons:
+  android: "homepage"
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#000000"
+
+# The following section is specific to Flutter p ackages.
 flutter:
 
   # The following line ensures that the Material Icons font is
