--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   simple_gradient_text: ^1.2.4
   flutter_hooks: ^0.18.5
   loader_overlay: ^2.2.0
+  retry: ^3.1.1
 
 dev_dependencies:
   flutter_test:
