--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_hooks: ^0.18.5
   loader_overlay: ^2.2.0
   retry: ^3.1.1
+  cached_network_image: ^3.2.3
+  gap: ^2.0.0
 
 dev_dependencies:
   flutter_test:
